--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
-              // "src/bundle.css",
-              // "src/bundle.addons.css",
-              // "src/material_designs.css",
-              // "src/styles_1.css"
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
